--- a/studentmanagment/Views/CourseVideo/MyVideos.cshtml
+++ b/studentmanagment/Views/CourseVideo/MyVideos.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "My Uploaded Videos";
+    Layout = "~/Views/Shared/_TeacherLayout.cshtml";
 }
 
 <h2 class="text-primary mb-4">فيديوهاتي</h2>
